--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "node load-env.js && hexo deploy --debug",
+    "deploy": "hexo deploy",
     "server": "hexo server"
   },
   "hexo": {
     "version": "7.3.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
     "hexo": "^7.3.0",
-    "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
