--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: THE TOLD AND UNTOLD STORIES OF WW2, THE COLD WAR, AND AMERICA'S OTHER CONFLICTS. THE PEOPLE INVOLVED, THE DECISIONS MADE, THE SECRET MISSIONS AND WHAT REALLY HAPPENED AND WHY.
+subtitle: '1941 - PRESENT DAY'
 description: ''
 keywords:
-author: John Doe
+author: Hunter T.
 language: en
 timezone: ''
 
