--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: THE TOLD AND UNTOLD STORIES OF WW2, /n
-      THE COLD WAR, AND AMERICA'S OTHER CONFLICTS. THE PEOPLE INVOLVED, THE DECISIONS MADE, THE SECRET MISSIONS, WHAT REALLY HAPPENED AND WHY.
+title: THE TOLD AND UNTOLD STORIES OF WW2, THE COLD WAR, AND AMERICA'S OTHER CONFLICTS. THE PEOPLE INVOLVED, THE DECISIONS MADE, THE SECRET MISSIONS, WHAT REALLY HAPPENED AND WHY.
 subtitle: '1941 - PRESENT DAY'
 description: ''
 keywords:
